# VidNCI

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md
examples/: basic_usage.py
tests/: __init__.py  test_code_generator.py
vidnci/: __init__.py  api.py  cli.py
vidnci/core/: __init__.py  _code_extractor.pyx  analyzer.py  code_extractor.py  code_generator.py  video_embedder.py
