[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vidnci"
dynamic = ["version"]
description = "A Python Library for Defining AI-Generated Videos using Noise-Coded Illumination"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VidNCI Team", email = "contact@vidnci.org"}
]
maintainers = [
    {name = "VidNCI Team", email = "contact@vidnci.org"}
]
keywords = [
    "video", "forensics", "ai-detection", "deepfake", "noise-coded-illumination",
    "nci", "computer-vision", "digital-forensics", "video-analysis", "authentication"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Media",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
    "pillow>=8.3.0",
    "scikit-image>=0.18.0",
    "matplotlib>=3.4.0",
    "pyav>=9.0.0",
    "ffmpeg-python>=0.2.0",
    "cython>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
ai = [
    "torch>=1.9.0",
    "tensorflow>=2.6.0",
    "scikit-learn>=1.0",
]
full = [
    "torch>=1.9.0",
    "tensorflow>=2.6.0",
    "scikit-learn>=1.0",
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/makalin/VidNCI"
Documentation = "https://vidnci.readthedocs.io/"
Repository = "https://github.com/makalin/VidNCI"
"Bug Tracker" = "https://github.com/makalin/VidNCI/issues"
"Source Code" = "https://github.com/makalin/VidNCI"

[project.scripts]
vidnci = "vidnci.cli:main"

[tool.setuptools]
packages = ["vidnci"]

[tool.setuptools.package-data]
vidnci = ["py.typed", "*.pyi"]

[tool.setuptools.dynamic]
version = {attr = "vidnci.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["vidnci"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
